--- a/camkes-linux-artifacts/camkes-linux-apps/demo-apps/virtio_vsock/CMakeLists.txt
+++ b/camkes-linux-artifacts/camkes-linux-apps/demo-apps/virtio_vsock/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 3.8.2)
 
 project(virtiovsock C)
 
-add_executable(vm0 vm0.c)
-add_executable(vm1 vm1.c)
-target_link_libraries(vm0 -static-libgcc -static)
-target_link_libraries(vm1 -static-libgcc -static)
+add_executable(vm_host vm_host.c)
+add_executable(vm_client vm_client.c)
+target_link_libraries(vm_host -static-libgcc -static)
+target_link_libraries(vm_client -static-libgcc -static)
